--- a/app/src/main/res/layout/fragment_my_list.xml
+++ b/app/src/main/res/layout/fragment_my_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/progressBar"
-    android:theme="@style/CustomTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".MyListFragment">
+    android:theme="@style/CustomTheme"
+    tools:context="ui.profile.MyListFragment">
 
     <ImageButton
         android:id="@+id/btnBack"
@@ -21,20 +21,24 @@
         app:srcCompat="@drawable/abc_vector_test"
         app:tint="#FFFFFF" />
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"
+        android:layout_marginBottom="56dp"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:clipChildren="true"
+                android:clipToPadding="false"
+                android:paddingBottom="8dp">
 
                 <FrameLayout
                     android:id="@+id/flIcon"
@@ -56,6 +60,23 @@
                         android:layout_height="92dp"
                         android:elevation="16dp" />
                 </FrameLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvMyWords"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/card_background"
+                    android:clipToPadding="false"
+                    android:elevation="8dp"
+                    android:layoutAnimation="@anim/layout_animation"
+                    android:minHeight="112dp"
+                    android:outlineProvider="bounds"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cvBg" />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cvBg"
@@ -95,6 +116,7 @@
                             <com.google.android.material.textfield.TextInputEditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                                 android:hint="add new word"
                                 android:inputType="text" />
 
@@ -168,36 +190,47 @@
                             app:pressedTranslationZ="0dp"
                             app:tint="@color/colorGreen" />
 
+                        <Button
+                            android:id="@+id/btnDebug"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginEnd="16dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:text="db" />
+
+                        <Button
+                            android:id="@+id/btnAdapter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="16dp"
+                            android:text="adapter"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/txtPlaceholder"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="16dp"
-                    android:elevation="8dp"
-                    app:cardCornerRadius="16dp"
-                    app:cardElevation="8dp"
-                    app:cardMaxElevation="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:elevation="10dp"
+                    android:text="your words will appear here"
+                    android:textColor="@color/bb_inActiveBottomBarItemColor"
+                    android:translationZ="10dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/rvMyWords"
+                    app:layout_constraintEnd_toEndOf="@+id/rvMyWords"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cvBg">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvMyWords"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-                </androidx.cardview.widget.CardView>
+                    app:layout_constraintTop_toTopOf="@+id/rvMyWords" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
