--- a/app/src/main/res/layout/phrase_row.xml
+++ b/app/src/main/res/layout/phrase_row.xml
@@ -8,7 +8,7 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="48dp"
         android:letterSpacing="0.1"
         android:text="PINYIN"
         android:textAllCaps="true"
@@ -21,7 +21,7 @@
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="48dp"
         android:letterSpacing="0.1"
         android:text="CHINESE"
         android:textAllCaps="true"
@@ -34,11 +34,12 @@
         android:id="@+id/txtPhraseEn"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
         android:text="en"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView17"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <TextView
@@ -78,7 +79,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/btnDelete"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginEnd="32dp"
